2006-09-11 Jens Tkotz <jens@peino.de> 1.5.5-svn-b8

 * Fix: If magic_quotes are On, stripslashes were called after sanitizing
	the input.
	This results in the fact that links in input with quotes were not
	regocnized.

 * Fix: Use stripslashes_deep() on Input.

2006-09-08 Jens Tkotz <jens@peino.de> 1.5.5-svn-b7

 * Change: Enhanced wording in config.

 * Fix: Little CSS for for .g-littlered.

2006-09-08 Jens Tkotz <jens@peino.de> 1.5.5-svn-b6

 * Fix: Added additional --keyword in xgettext calls to support gettext 0.15

2006-09-04 Jens Tkotz <jens@peino.de> 1.5.5-svn-b5

 * Fix: Preloading fix from b1 was not fully correct.

 * Change: centered photo and navigation when embedded.

 * Fix: HTML fix in ecard form.

2006-09-04 Jens Tkotz <jens@peino.de> 1.5.5-svn-b4

 * Fix: Shadow frame files were corrupted ?!?

2006-09-02 Jens Tkotz <jens@peino.de> 1.5.5-svn-b3

 * Fix: Fix for next Tab in b1 was not fully correct.

2006-09-02 Jens Tkotz <jens@peino.de> 1.5.5-svn-b2
 
 * Fix: Link to colorpicker was broken.
        (Thanks to chasba from IRC)

2006-09-02 Jens Tkotz <jens@peino.de> 1.5.5-svn-b1

 * Fix: Font color issue in multifile Js

 * Fix: "next tab" was broken in Config

 * Fix: Preloading feature in FF does not increase the counter
	in view_album and view_photo.
	(Thanks to Jade)

2006-08-14 Jens Tkotz <jens@peino.de>

 ***  Release: 1.5.4 ***

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b17

 * Fix: #1444556;

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b16

 * Change: _() to gTranslate at various places.

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b15

 * Change: Use non-table tabs from 1.6

 * HTML fixes in setup/config_data.inc

 * Adjustments in skins: hotred, yellow, jenskin, white1

 * Some indenting.

 * if galleryLink as empty target, dont use href=

2006-08-13 Jens Tkotz <jens@peino.de> 1.5.4-svn-b14

 * Change: Removed "No Votes messages".

 * Change: Show link to full results only if there are results.
