@@ -129,7 +129,11 @@ if (!$GALLERY_EMBEDDED_INSIDE) {
   <?php common_header();
   /* RSS */
   if ($gallery->app->rssEnabled == "yes" && !$gallery->session->offline) {
-  	$title = sprintf(gTranslate('core', "%s RSS"), $gallery->app->galleryTitle . " :: " . $gallery->album->fields["title"]);
+  	$title = sprintf(
+        gTranslate('core', "%s RSS"),
+        $gallery->app->galleryTitle . " :: " . htmlspecialchars($gallery->album->fields["title"])
+    );
+
 	$rssHref = $gallery->app->photoAlbumURL . "/rss.php?set_albumName=" . $gallery->album->fields["name"];
   	?>
   <link rel="alternate" title="<?php echo $title; ?>" href="<?php echo $rssHref; ?>" type="application/rss+xml">
