@@ -1,3 +1,8 @@
+2006-09-11 Jens Tkotz <jens@peino.de> 1.5.5-svn-b9
+
+ * Fix: Use htmlspecialchars() in <link rel="alternate" ...>
+	to avoid problems with links in album and Gallery title.
+
 2006-09-11 Jens Tkotz <jens@peino.de> 1.5.5-svn-b8
 
  * Fix: If magic_quotes are On, stripslashes were called after sanitizing
